<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <EditText
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/register_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="33dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="58dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/register_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="33dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="58dp"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <ImageView
        android:id="@+id/register_google"
        android:layout_width="71dp"
        android:layout_height="68dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="123dp"
        android:contentDescription="@string/loginwithgoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register_facebook"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password"
        app:srcCompat="@drawable/googleLogo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/register_facebook"
        android:layout_width="71dp"
        android:layout_height="68dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="123dp"
        android:contentDescription="@string/loginwithgoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password"
        app:srcCompat="@drawable/LoginWithFacebookLogo" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="131dp"
        android:layout_height="45dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="156dp"
        android:contentDescription="@string/registertext"
        android:fontFamily="sans-serif-black"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/reg_name"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>