<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_logo" />

    <ImageView
        android:id="@+id/login_page_logo"
        android:layout_width="274dp"
        android:layout_height="271dp"
        android:layout_marginTop="62dp"
        android:contentDescription="@string/loginpagelogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/AHelpingHandLogoV2"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="196dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="58dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/login_google"
        android:layout_width="71dp"
        android:layout_height="68dp"
        android:layout_marginStart="243dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:srcCompat="@drawable/googleLogo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/loginwithgoogle" />

    <ImageView
        android:id="@+id/login_facebook"
        android:layout_width="71dp"
        android:layout_height="68dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:srcCompat="@drawable/LoginWithFacebookLogo"
        android:contentDescription="@string/loginwithgoogle" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/logintext"
        android:fontFamily="sans-serif-black"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_page_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>